[package]
name = "iced-themer"
version = "0.2.1"
edition = "2024"
description = "Parse TOML theme files into iced's native Theme type"
license = "MIT"

[workspace]
members = ["example"]

[dependencies]
iced_core = "0.14"
iced_widget = "0.14"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
thiserror = "2"
farver = "3"
